overflow-fix

--- a/style/mian.css
+++ b/style/mian.css
@@ -40,6 +40,8 @@ body{
     gap: 2.5rem;
 
     align-items: stretch;
+    
+    overflow: hidden;
 }
 
 /*Pill*/
